<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación modificada por \n <b>Fco. José Rodríguez Ruiz.</b></string>
    <string name="accept">Aceptar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paragraph4">Cuando estés listo para empezar, solo tienes que pulsar en la gema de abajo y te llevaré volando a través de esta guia interactiva</string>
    <string name="paragraph3">Te voy a enseñar a navegar por un mundo lleno de dragones, mundos fascinantes y montones de tesoros brillantes</string>
    <string name="paragraph2">al mágico mundo de</string>
    <string name="paragraph1">BIENVENIDO</string>
    <string name="guide">Guide</string>
    <string name="info">Info</string>
    <string name="comenzar">COMENZAR</string>
    <string name="close_guide">Ver esta guía después</string>
    <string name="repetir_guia">Volver a ver esta Guía</string>
    <string name="finalizar">Finalizar</string>
    <string name="saltar_guia">Saltar &gt;</string>
    <string name="mensaje_pantalla_dos">Aquí podrás aprender muchas cosas sobre cada personaje: amigos y enemigos de Spyro</string>
    <string name="mensaje_pantalla_tres">Cuanto toques este botón conocerás los Mundos por los que se mueve Spyro</string>
    <string name="mensaje_pantalla_cuatro">¿Te gusta ganar tesoros? Pues aquí te enseño cuales son los que vas a poder capturar</string>
    <string name="mensaje_pantalla_cinco">Desde esta opción del menú podrás ver los datos del desarrollador/a</string>
    <string name="message_1_resume">Si quieres aprender sobre los personajes del juego toca el botón \'Personajes\'</string>
    <string name="message_2_resume">Desde aquí podrás conocer los Mundos por los que se mueve Spyro</string>
    <string name="message_3_resume">Aquí encontrarás todos los objetos que puedes recolectar para desbloquear niveles, mejorar habilidades y mucho más</string>
    <string name="message_4_resume">¿Quieres más información sobre los creadores de este juego? Aquí la tienes.</string>
    <string name="elora">Elora</string>
    <string name="spyro_the_dragon">Spyro The Dragon</string>
    <string name="spyro_logo">Spyro Logo</string>
    <string name="boton_personajes">Boton Personajes</string>
    <string name="boton_mundos">Boton Mundos</string>
    <string name="boton_coleccionables">Boton Coleccionables</string>
    <string name="boton_info">Boton Info</string>
    <string name="mensaje_dos_final">A partir de ahora, tú tomas el control del juego. Diviertete!</string>
    <string name="recuerda">Recuerda…</string>
    <string name="continuar">Continuar</string>
    <string name="fire">Lanza fuego</string>
    <string name="enfocar">Indicar donde pulsar</string>
    <string name="logo_spyro_image">Logo Spyro Image</string>
    <string name="logo_spyro_text">Logo Spyro text</string>
    <string name="gema">Gema</string>
    <string name="siguiente">Siguiente</string>
    <string name="previa">Previa</string>
    <string name="salir_de_la_guia">Salir de la guía</string>
    <string name="exit_guide_title">Salir de la guía</string>
    <string name="exit_guide_message">¿Estás seguro de que quieres salir de la guía?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>