<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hamburguesa_2"
    style="@style/TextMessageGuide"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:maxWidth="300dp"
    android:background="@drawable/spyro_speech_bubble"
    android:padding="6dp">

    <TextView
        android:id="@+id/message_text"
        style="@style/TextMessageGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mensaje_pantalla_dos"
        app:layout_constraintEnd_toStartOf="@id/exit_guide_2"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exit_guide_2"
        style="@style/ButtonExitGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_exit_to_app_24"
        android:contentDescription="@string/saltar_guia"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón Previo -->
    <Button
        android:id="@+id/button_prev_2"
        style="@style/ButtonPrev"
        android:layout_width="88dp"
        android:layout_height="35dp"
        android:text="@string/previa"
        app:layout_constraintTop_toBottomOf="@id/message_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp" />

    <!-- Botón Siguiente -->
    <Button
        android:id="@+id/button_next_2"
        style="@style/ButtonNext"
        android:text="@string/siguiente"
        app:layout_constraintTop_toBottomOf="@id/message_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>