<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/guide_screen_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_transparent"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone">

    <android.widget.Button
        android:id="@+id/button_fire_dragon"
        android:layout_width="181dp"
        android:layout_height="150dp"
        android:background="@color/white_transparent"
        android:contentDescription="@string/fire"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <!-- Add DragonFireView para dibujar las llamas -->

    <dam.pmdm.spyrothedragon.guide.DragonFireView
        android:id="@+id/dragonFireView"
        android:layout_width="181dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/hamburguesa_2"
        android:visibility="invisible"
        style="@style/TextMessageGuide"
        android:layout_width="268dp"
        android:layout_height="148dp"
        android:textAlignment="center"
        android:elevation="10dp"
        android:background="@drawable/speech_bubble"
        android:text="@string/mensaje_pantalla_dos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <android.widget.Button
        android:id="@+id/exit_guide_2"
        style="@style/ButtonExitGuide"
        android:text="@string/saltar_guia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.widget.Button
        android:id="@+id/continue_button_2"
        android:layout_width="149dp"
        android:layout_height="64dp"
        android:background="@drawable/ripple_effect"
        android:contentDescription="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hamburguesa_2"
        app:layout_constraintVertical_bias="0.983" />

    <ImageView
        android:id="@+id/elora_2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/elora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

</androidx.constraintlayout.widget.ConstraintLayout>
